changed to the "about page"

--- a/menupagestylesheet/style.css
+++ b/menupagestylesheet/style.css
@@ -125,6 +125,7 @@ body {
   margin: 2vh;
   margin-left: 0;
   margin-right: 0;
+  width: 60vw;
   font-family: 'Roboto', sans-serif;
   font-weight: normal;
   text-shadow: none;
