--- a/menupagestylesheet/style.css
+++ b/menupagestylesheet/style.css
@@ -112,6 +112,7 @@ body {
 
   background-color: white;
   background-image: linear-gradient(315deg, #9dc5c3 0%, #5e5c5c 74%);
+  min-height: 100vh;
 
 
   width: 100vw;
