--- a/menupagestylesheet/style.css
+++ b/menupagestylesheet/style.css
@@ -9,6 +9,8 @@
 }
 html{
   min-width: 100vw;
+  background-image: linear-gradient(315deg, #9dc5c3 0%, #5e5c5c 74%);
+  min-height: 100vh;
 }
 body {
   display: flex;
