--- a/menupagestylesheet/style.css
+++ b/menupagestylesheet/style.css
@@ -114,6 +114,7 @@ body {
 
   background-color: white;
   background-image: linear-gradient(315deg, #9dc5c3 0%, #5e5c5c 74%);
+  height: 100%;
 
 
 
