--- a/menupagestylesheet/style.css
+++ b/menupagestylesheet/style.css
@@ -114,7 +114,6 @@ body {
   background-image: linear-gradient(315deg, #9dc5c3 0%, #5e5c5c 74%);
 
 
-
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -126,7 +125,7 @@ body {
   margin: 2vh;
   margin-left: 0;
   margin-right: 0;
-  
+  width: 60vw;
   font-family: 'Roboto', sans-serif;
   font-weight: normal;
   text-shadow: none;
