--- a/menupagestylesheet/style.css
+++ b/menupagestylesheet/style.css
@@ -9,7 +9,7 @@
 }
 html{
   min-width: 100vw;
-  
+
   background-image: linear-gradient(315deg, #9dc5c3 0%, #5e5c5c 74%);
   min-height: 100vh;
 }
@@ -132,6 +132,17 @@ body {
   font-weight: normal;
   text-shadow: none;
   font-size: 1.5em;
+}
+.aboutparagraph{
+  margin: 2vh;
+  margin-left: 0;
+  margin-right: 0;
+  max-width: 90vw;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+  text-shadow: none;
+  font-size: 1.5em;
+
 }
 .headercontent{
   align-self: center;
