--- a/signup/style.css
+++ b/signup/style.css
@@ -5,6 +5,7 @@ body,html{
   padding: 0;
   width: 100%;
   display: flex;
+  min-height: 200vh;
 
   align-items: center;
   flex-direction: column;
